2011-11-25 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-85
	* Change TEST2R host from int2r2-v.cern.ch to int2r1-v.cern.ch
	* Add first prototype panel for documentation fields. (bug 75959).
	* Add logic to show documentation fields when available in the db. (bug 75958).
	
2011-11-21 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-84
	* Show list of sequences containing the selected sequence in the
	  right lower panel. (bug 88620).

2011-11-18 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-83
	* Add errorNotification panel to present error details. (bug 88414).
	* Handle exceptions generated by broken configurations in load process. (bug 88414).
	* Add getConfDbVersion and getContactPerson methods in AboutDialog class
	  to be used when reporting errors.

2011-11-08 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-82
	* Add new tab in right lower panel with a list of sequences containing 
	  the selected module. (bug 88620).

2011-11-07 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-81
	* Save value of the parameter that is being edited when clicking 
	  the Configuration tree. (bug75952).

2011-11-03 Martin Grunewald <Martin.Grunewald@cern.ch>
	* tag V01-05-80
	* Allow direct renaming of Streams, incl. auto-update of OM label

2011-10-31 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-79
	* Fix Bug 82525: "import" feature resets the size / position of the panels.
	* Correct a ChangeLog mistake.
	
2011-10-30 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-78
	* Fix bug75952: Add StopEditing functionality to TreeTable Class
	
2011-10-20 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* Refresh paths and sequences top nodes in the TreeModel when 
	  a module name is changed. bug 83721.

2011-10-18 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-77